Added post.html & archive.html and modified main.html(responsiveness)

--- a/rlive/css/source/banners.less
+++ b/rlive/css/source/banners.less
@@ -51,7 +51,7 @@
 
   .breaking-news-dot {
     background-size: 300px 300px;
-    background-position: -121px -47px;
+    background-position: -7px -8px;
     position: absolute;
     right: 15px;
     bottom: 5px;
@@ -87,7 +87,9 @@
 }
 
 #main,
-#article {
+#article,
+#post,
+#arhiva {
   .breaking-news-banner {
     background-color: @breaking-news-panel-color-main;
     color: @breaking-news-header-color-main;
