--- a/rlive/css/style.less
+++ b/rlive/css/style.less
@@ -176,6 +176,14 @@ a {
 /*=====  End of Toate Stirile  ======*/
 
 /*=============================================
+=            Realitatea            =
+=============================================*/
+
+@import "source/realitatea.less";
+
+/*=====  End of Realitatea  ======*/
+
+/*=============================================
 =            Arhiva            =
 =============================================*/
 
