Added the mobile menu for all 3 pages

--- a/rlive/css/source/variables.less
+++ b/rlive/css/source/variables.less
@@ -41,7 +41,8 @@
 @search-text-color: #b7b7b7;
 @search-placeholder-color: #514a64;
 @search-panel-color: #0a090e;
-@footer-copyright-text-color: #c8c8c8;
+@search-menu-panel-color: #1f1a29;
+@footer-copyright-text-color: #534c68;
 
 @main-font: "Inter", san-serif;
 @main-font-weight: 600;
