--- a/rlive/css/source/media-queries.less
+++ b/rlive/css/source/media-queries.less
@@ -187,6 +187,11 @@
 
 // Medium devices (tablets, less than 992px) md
 @media (max-width: 991.98px) {
+  header .container .row > div.logo-col {
+    padding-left: unset;
+    padding-right: unset;
+  }
+
   .container.container-lg {
     width: 100%;
   }
@@ -199,6 +204,10 @@
     overflow-x: hidden;
   }
 
+  .banners {
+    padding-top: 5em;
+  }
+
   header.mobile {
     position: fixed;
 
@@ -207,7 +216,12 @@
     margin-top: 0;
     top: 0;
 
+    .menu .menu-header .right-header-menu {
+      padding-left: 15px;
+    }
+
     .header-replacement {
+      padding: 0;
       .right-nav-mobile {
         justify-content: flex-end;
       }
@@ -222,8 +236,6 @@
       margin: 0;
       width: 100%;
       max-width: 100%;
-
-      background-color: white;
       .basic-shadow();
 
       z-index: 10;
@@ -239,20 +251,22 @@
         .left-nav-mobile {
           display: flex;
           justify-content: flex-start;
-          padding-left: 1.6em;
         }
 
         .right-nav-mobile {
           display: flex;
           justify-content: flex-end;
-          padding-right: 0;
         }
       }
 
       .logo-col a {
-        width: fit-content;
+        width: 140px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         .logo {
           margin: 0;
+          background-position: 0 5px;
         }
       }
 
@@ -264,12 +278,13 @@
       }
 
       .menu-icon {
-        background-position: -5px -222px;
+        background-position: -45px -131px;
+        width: 40px;
+        height: 40px;
       }
       .search-icon-header {
-        background-position: -90px -218px;
-        background-size: 340px;
-        margin-right: 15px;
+        background-position: -10px -55px;
+        background-size: 400px;
       }
       .business-black {
         background-position: -131px -217px;
@@ -278,10 +293,11 @@
     }
 
     .header-replacement {
+      background-color: @rlive-background-color;
       position: absolute;
-      top: -55px;
+      top: -49px;
       left: 0;
-      padding-right: 1em;
+      padding: 0;
       & > div {
         display: flex;
         align-items: center;
@@ -290,17 +306,21 @@
         display: flex;
       }
       .close-menu-icon {
-        background-position: -48px -222px;
+        background-position: -310px -90px;
       }
       .no-shadow();
     }
 
     .search-box {
       position: relative;
-      bottom: 100px;
+      bottom: 150px;
       transition: 0.3s ease-in-out;
       z-index: 9;
       height: 1px;
+      #header-search {
+        width: 50%;
+        .no-shadow();
+      }
       .basic-shadow();
       .search-field {
         position: absolute;
@@ -327,6 +347,7 @@
       }
       .icon {
         right: 3px;
+        top: 10px;
       }
     }
   }
@@ -869,9 +890,10 @@
 
   .menu {
     display: none;
-    width: 100vw;
+    height: 100vh;
     margin: 0;
-    background-color: white;
+    background-color: @rlive-background-color;
+    color: white;
     position: relative;
     z-index: 12;
     padding: 1em;
@@ -879,6 +901,10 @@
     bottom: 10px;
     transition: 0.3s ease-in-out;
     opacity: 0;
+
+    .logo-col {
+      padding: 0;
+    }
 
     .menu-header {
       position: relative;
@@ -922,24 +948,31 @@
       font-size: 13pt;
       font-family: @main-font;
       border-radius: 25px;
+
+      &#header-search {
+        padding: 0.7em 1em;
+        font-size: 12pt;
+        background-color: @search-menu-panel-color;
+        .no-shadow();
+      }
     }
     .search-icon {
       width: 30px;
       height: 30px;
-      background-position: 5px -40px;
+      background-position: -8px -50px;
       background-size: 350px;
-      right: 7%;
-      top: 15%;
+      right: 4%;
+      top: 10%;
     }
 
     .menu-middle {
       margin: 0.5em 0;
       li {
         margin-bottom: 0.3em;
-        transition: 0.3s ease-in-out;
+        transition: 0.2s ease-in-out;
         width: fit-content;
         &:hover {
-          color: lighten(black, 30%);
+          color: darken(white, 20%);
         }
       }
       ul {
@@ -950,13 +983,21 @@
         font-size: 13pt;
         margin-bottom: 0;
         .live {
-          background-position: -78px -27px;
+          background-position: -2px -2px;
         }
+      }
+    }
+
+    .menu-bottom,
+    .menu-footer {
+      ul {
+        flex-direction: row;
       }
     }
 
     .menu-bottom {
       flex-direction: column;
+
       li {
         margin: 0.2em 0.5em;
       }
@@ -964,25 +1005,28 @@
       .icon {
         width: 45px;
         height: 45px;
-        background-size: 490px;
+        background-size: 450px;
+      }
+      .facebook {
+        background-position: -230px -60px;
       }
       .odnoklasniki {
-        background-position: -61px 0;
+        background-position: -287px -60px;
       }
       .telegram {
-        background-position: -123px 0;
+        background-position: -343px -60px;
       }
       .twitter {
-        background-position: -184px 0;
+        background-position: -399px -60px;
       }
       .youtube {
-        background-position: -245px 0;
+        background-position: -117px -175px;
       }
 
       .business,
       .currency-button,
       .weather-button {
-        background-size: 200px;
+        background-size: 450px;
       }
 
       .business {
@@ -992,7 +1036,7 @@
         background-position: -153px -128px;
       }
       .weather-button {
-        background-position: -3px -151px;
+        background-position: -6px -175px;
       }
       .additional {
         margin-bottom: 0;
@@ -1001,11 +1045,12 @@
 
     .menu-footer {
       font-size: 15pt;
+      flex-direction: column;
       li {
-        transition: 0.3s ease-in-out;
-        color: @text-header-menu-color;
+        transition: 0.2s ease-in-out;
+        color: white;
         &:hover {
-          color: @text-header-menu-color-hover;
+          color: darken(white, 20%);
         }
       }
       .copyright-text {
@@ -1093,9 +1138,57 @@
   }
 }
 
+@media (max-height: 470px) {
+  .menu-bottom,
+  .menu-middle > ul {
+    flex: 0 0 32% !important;
+    max-width: 0 0 32% !important;
+  }
+}
+
+@media (max-height: 370px) {
+  .menu-bottom,
+  .left-nav-footer,
+  .menu-middle > ul {
+    flex: 0 0 20% !important;
+    max-width: 0 0 20% !important;
+  }
+
+  .menu-footer {
+    order: 4;
+  }
+
+  .menu-middle > ul {
+    order: 1;
+  }
+
+  .left-nav-footer {
+    order: 2;
+  }
+
+  .menu-bottom {
+    order: 3;
+  }
+
+  .menu .menu-footer ul {
+    flex-direction: column;
+  }
+}
+
+@media (max-height: 360px) {
+  .menu {
+    height: 100vh;
+  }
+  .scrollable-menu {
+    overflow: auto;
+    height: 75vh;
+  }
+}
+
 // Large devices (desktops, less than 1200px) lg
 @media (max-width: 1199.98px) {
   header {
+    background-color: @rlive-background-color;
     .icon {
       &.facebook,
       &.odnoklasniki,
